--- a/packages/client/src/layout/rewards.scss
+++ b/packages/client/src/layout/rewards.scss
@@ -113,11 +113,18 @@ button.expand {
     font-size: $sans-size-s;
     color: $purp-dark;
   }
+  .background-container {
+    margin-bottom: 25px;
+  }
 
   .info-banner {
+    padding: 0;
+    margin: 0;
+    width: 100%;
     button {
       font-size: $sans-size-base;
     }
+
   }
 
   .rewards-list-item {
